GF-56347: Grab bag of RTL fixes: - Slider: fix to properly calculate value in RTL when min != 0 - Popup/ContextualPopup: flip button position and reserved space in RTL - Scroller: flip vertical scrollbar position in RTL DCO-1.1-Signed-Off-By: Kevin Schaaf <kevin.schaaf@lge.com>

--- a/css/Scroller.less
+++ b/css/Scroller.less
@@ -27,6 +27,10 @@
 .moon-scroller-client-wrapper.v-scroll-enabled {
 	padding-right:  @moon-icon-button-small-size + @moon-spotlight-outset;
 }
+.enyo-locale-right-to-left .moon-scroller-client-wrapper.v-scroll-enabled {
+	padding-right: 0;
+	padding-left:  @moon-icon-button-small-size + @moon-spotlight-outset;
+}
 .moon-scroller-client-wrapper.h-scroll-enabled {
 	padding-bottom:  @moon-icon-button-small-size;
 }
@@ -67,6 +71,10 @@
 	bottom: 0px;
 	right: @moon-spotlight-outset;
 	width:  @moon-icon-button-small-size;
+}
+.enyo-locale-right-to-left .moon-scroller-v-column {
+	right: auto;
+	left: @moon-spotlight-outset;
 }
 /* Default position for horizontal scrollbar */
 .moon-scroller-h-column {
